updated info about author

--- a/index.Rmd
+++ b/index.Rmd
@@ -64,11 +64,11 @@ Under the following terms:
 
 ## About the author {-}
 
-Since September 2018, [Dr Carlos Vega works as a postdoctoral researcher](https://wwwen.uni.lu/lcsb/people/carlos_vega_moreno) in the Bioinformatics Core Group led by Prof. Dr Reinhard Schneider at the Luxembourg Centre for Systems Biomedicine (L.C.S.B) at the University of Luxembourg. 
+Since September 2018, [Carlos Vega](https://wwwen.uni.lu/lcsb/people/carlos_vega_moreno) works as a postdoctoral researcher in the Bioinformatics Core Group led by Prof. Dr Reinhard Schneider at the Luxembourg Centre for Systems Biomedicine (L.C.S.B) at the University of Luxembourg. 
 
-Previously, Dr Vega worked at the Autonomous University of Madrid (UAM) researching high-performance solutions for big data analysis as well as anomaly detection methodologies. He received his B.Sc (2013), M.Sc (2014) and PhD (2018 with *cum laude* and industrial mentions) degrees in Computer Science Engineering from UAM. In 2012 he joined the High-Performance Computing and Networking Research Group (HPCN) led by Prof. Dr Javier Aracil, first as a student and later as a researcher as part of the Network of Excellence InterNet Science European project. During his PhD, he continued his work at the HPCN group as a technical researcher for the project TRÁFICA and the European projects Fed4Fire and dReDBox, among others. At the same time, he worked at Naudit applying his research to projects with different enterprises. 
+Previously, he worked at the Autonomous University of Madrid (UAM) researching high-performance solutions for big data analysis as well as anomaly detection methodologies. He received his B.Sc (2013), M.Sc (2014) and PhD (2018 with *cum laude* and industrial mentions) degrees in Computer Science Engineering from UAM. In 2012 he joined the High-Performance Computing and Networking Research Group (HPCN) led by Prof. Dr Javier Aracil, first as a student and later as a researcher as part of the Network of Excellence InterNet Science European project. During his PhD (2014 - 2017), he continued his work at the HPCN group as a technical researcher for the project TRÁFICA and the European projects Fed4Fire and dReDBox, among others. At the same time, he worked at [Naudit](https://www.naudit.es/en) (2015 - 2018) applying his research in computer network auditing projects with different enterprises. In 2022, he became a senior member of the Institute of Electrical and Electronics Engineers (IEEE).
 
-Additionally, Carlos has taught several courses at UAM, including Multimedia Networking, Network Planning and Network Management. Currently, it is the main teacher of the course "Applied Philosophy of Science and Data Ethics" at the Faculty of Science, Technology and Medicine (FSTM) of the University of Luxembourg. Since 2022, he is a senior member of the Institute of Electrical and Electronics Engineers (IEEE).
+Additionally, his teaching experience includes several courses on computer networks, such as Multimedia Networking, Network Planning and Network Management, taught during his time at UAM. Since 2021, he is the main teacher of the course "Applied Philosophy of Science and Data Ethics" for the Master of Data Science at the Faculty of Science, Technology and Medicine (FSTM) of the University of Luxembourg.
 
 ### Contributing to the book {-}
 
